
[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vrisber"
version = "0.5.0"
description = "VR SBS video processor built on top of imageProcessor-cli"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Your Name", email = "you@example.com" }
]

# Python dependencies; ffmpeg and imageProcessor-cli are external tools.
dependencies = []

[project.scripts]
vrisber = "vrisber.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
